puppetboard/puppetboard.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: puppetboard
  name: puppetboard
  namespace: puppet
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: puppetboard
  template:
    metadata:
      labels:
        k8s-app: puppetboard
    spec:
      containers:
      - image: quay.io/dhtech/puppetboard
        imagePullPolicy: Always
        name: puppetboard
        volumeMounts:
          - mountPath: "/puppetdb-keys"
            name: puppetdb-keys
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
      - image: quay.io/dhtech/dhauth
        imagePullPolicy: Always
        name: dhauth
      restartPolicy: Always
      volumes:
        - name: puppetdb-keys
          secret:
            secretName: puppetdb-keys
            defaultMode: 256 # 0400 in decimal
