puppetboard/svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: puppetboard-http
  namespace: puppet
  labels:
    k8s-app: puppetboard
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    k8s-app: puppetboard
  type: ClusterIP
